<resources>
    <string name="app_name">Raspi-Drone</string>
    <string name="_250m">250m</string>
    <string name="_6m_s">6m/s</string>
    <string name="_40_26">40° 26′</string>
    <string name="raspi">RasPi</string>
    <string name="_24">24%</string>
    <string name="sunny">Sunny</string>
    <string name="_12_6ms">12.6ms</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="ip_address">IP Address</string>
    <string name="connect">Connect</string>
    <string name="manual">Manual</string>
    <string name="mode">Mode</string>
    <string name="autopilot">Autopilot</string>
    <string name="maximum_altitude">Maximum Altitude</string>
    <string name="no_touch">No touch</string>
</resources>
