<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="23sp">

    <LinearLayout
        android:id="@+id/llm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="1sp"
            android:layout_height="wrap_content"
            android:text="@string/_250m"
            android:layout_weight="1.0"
            android:textSize="23sp"
            android:textAlignment="center" />

        <TextView
            android:layout_width="1sp"
            android:layout_height="wrap_content"
            android:text="@string/_6m_s"
            android:textSize="23sp"
            android:textAlignment="center"
            android:layout_weight="1.0" />

        <TextView
            android:layout_width="1sp"
            android:layout_height="wrap_content"
            android:text="@string/_40_26"
            android:layout_weight="1.0"
            android:textAlignment="center"
            android:textSize="23sp"/>

        <com.hanks.htextview.evaporate.EvaporateTextView
            android:id="@+id/main-head"
            android:layout_width="1sp"
            android:layout_height="wrap_content"
            android:text="@string/manual"
            android:textAlignment="center"
            android:layout_weight="1.0"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="1sp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:textAlignment="center"
            android:text="@string/_24"
            android:textSize="23sp" />

        <TextView
            android:layout_width="1sp"
            android:layout_height="wrap_content"
            android:text="@string/sunny"
            android:layout_weight="1.0"
            android:textAlignment="center"
            android:textSize="23sp" />

        <TextView
            android:layout_width="1sp"
            android:layout_height="wrap_content"
            android:text="@string/_12_6ms"
            android:layout_weight="1.0"
            android:textAlignment="center"
            android:textSize="23sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/llm">

        <com.google.android.cameraview.CameraView
            android:id="@+id/camera"
            android:layout_marginTop="8sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:keepScreenOn="true"
            android:adjustViewBounds="true"
            app:autoFocus="true"
            app:facing="back"
            app:flash="off"
            app:aspectRatio="16:9" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left"
            android:padding="5sp"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:layout_marginTop="17sp"
            android:layout_marginBottom="5sp"
            android:layout_marginStart="8sp"
            android:textSize="14sp"
            android:layout_marginEnd="8sp"
            android:textStyle="bold"
            android:background="@drawable/control_buts" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right"
            android:padding="5sp"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:layout_marginTop="17sp"
            android:layout_marginBottom="5sp"
            android:textSize="14sp"
            android:layout_marginEnd="8sp"
            android:textStyle="bold"
            android:background="@drawable/control_buts"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/up"
            android:padding="5sp"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:layout_marginTop="17sp"
            android:layout_marginBottom="5sp"
            android:textSize="14sp"
            android:layout_marginStart="8sp"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:background="@drawable/control_buts" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/down"
            android:padding="5sp"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:layout_marginTop="17sp"
            android:layout_marginBottom="5sp"
            android:textSize="14sp"
            android:layout_marginEnd="8sp"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/control_buts"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

</RelativeLayout>